@@ -1,7 +1,12 @@
 AUX app.ini-1.6.2 769 BLAKE2B 6203c9ef0b3d812a3de3e130238412a56eb2bbe57f9fe5d82da9b72b655f6f0031d5a78062fa9d3d578990e7455d7592315ec9b34d4a07b28c6209bb2997d2bd SHA512 ea8475f7ce6032149392717facd90aabc26b4b308df2c25b202e1a90bcea154914d6ddf2e7672d65c0673c224145099eca059db37fd9efe0edd296452d60aa4f
+AUX drone-runner-docker.confd 769 BLAKE2B 6203c9ef0b3d812a3de3e130238412a56eb2bbe57f9fe5d82da9b72b655f6f0031d5a78062fa9d3d578990e7455d7592315ec9b34d4a07b28c6209bb2997d2bd SHA512 ea8475f7ce6032149392717facd90aabc26b4b308df2c25b202e1a90bcea154914d6ddf2e7672d65c0673c224145099eca059db37fd9efe0edd296452d60aa4f
+AUX drone-runner-docker.initd 508 BLAKE2B 30d283469f7ff83f484f563975d91c5d22af86d081cf36dddffce668a90c7a3e90ea7060c53606a37a823ae77b02053e489f9988fb73390c7bd28f245fb8895b SHA512 65edfdb1195221b51e3c494d6929bf2e0b4621443b0456e1f02d3d38dd0c9dca98bdc8633f24f4adf63fe9369ad14fb004a20d2daf23d3f2107f656359ff6a44
+AUX drone-runner-docker.service 385 BLAKE2B 6531cd79c97f12a042d998ccc4378b28d436a935c479396fcc74cc1b983bef58021a9cb7c31ca4c8e4cbbebbd40d1458eebe85db9b24e091884b98f565855ac9 SHA512 86b68ba0c8df2c0ddd7458a58f9e86e32d6beea96cd27030161dd8be9416a29c4d68ea97e9a048476923c5495a92b1c4d109f179311c8c4fb5c9f64c85334d39
 AUX drone-runner-docker.service-1.6.2 371 BLAKE2B 1ffb5f836d87c444acbd494b2315ee2222a332566693553ec8fa12c4291185f8c417f6630d2093c7f978c3e65c10243b944c751b1f5c29116c4cba196103553a SHA512 619d1c65e91af40e1affed7b23edb00ec25d9a5b1ea6812931d86f716ca9e8ed40c605b6a45966b296ff623c66a9169b0ddac1ebdc4de7194fafd5efd683baf0
 DIST cloud.google.com%2Fgo%2F@v%2Fv0.26.0.mod 27 BLAKE2B 814b0fa8f12d5ce6171fa629b5a7eb34e0e882cc0c5430986896bb38c243e08dc83098f271227f4ba019e78f16dc97fbb381e833aff1819833d243b08add916b SHA512 5132f3438533427c0ab0fbb7a12112a7830ea9122662ed46019ff89c71d9cf80c02edc32dd5c892da572031b5a2cce100f2602fa6a19bea6be7c02781f701273
 DIST drone-runner-docker-1.6.3.tar.gz 59814 BLAKE2B 0bea0ca1cfb28f543437c73e3f6e60e100ed1c2a947c56ee59256f14696983d0340a5c08c3a2539c5acff2da9d0a568c6a04914bb763dd08b8dec0f3d006386f SHA512 0d1949d070bf9e088477569f10282178437e5b64b12a989e32d4dae1524d9290feb32690e4ae31e5e2a75b0bd291daf0a8373cdd574add97ef7cb9d75aeb8d5c
+DIST drone-runner-docker-1.8.1-deps.tar.xz 41631016 BLAKE2B ebf7b33cd4666fa30f5935e8c7c6ffddcd6b35fa079aa1aaa539bba3fc71198310347d7807ce0f6e0e077d43a76ec62c7827342829789c02e512afc55b553923 SHA512 5d07dfb4606c3a5354c29bff35d3d817c0b568d889497105efbe016de881f1fccfeb6a89cd0bc9800e48fac54572554e069930f3a6d405fcbf437cb05b674c59
+DIST drone-runner-docker-1.8.1.tar.gz 60986 BLAKE2B 683a56a8503bffd833cf5a9229a67c76f53e729b906ea48f4e0ee026717cad1399a63d5ae714bebded3e90af91de89727ab0c18d2c0b088e6095bf8a25ae5fb0 SHA512 b89f6eafd8d7b8201bc758125483a2a43f2555f8fa96513d51634021101494a8e84d594af78e02c64de1da10a348f1771b784e93aae65de9eff1cacde4be59b1
 DIST github.com%2F!azure%2Fgo-ansiterm%2F@v%2Fv0.0.0-20170929234023-d6e3b3328b78.mod 36 BLAKE2B 52a2c5272e004524397df00dfa03b4c2d2ebd985a0c974236aad6b847d6b2b4b7c9b69ef48e263f4c67983b845b020d2004fe749b46fee3c0525da0416b20f3e SHA512 350a16c68553738ce8c2f4a6ac8beba66a7dcf2386a42aff938ebaa3bdc526bda8e5c51c493331eda4666cbcf8411ee7ca3aeb0768cc4f557f34585960f9eb84
 DIST github.com%2F!azure%2Fgo-ansiterm%2F@v%2Fv0.0.0-20170929234023-d6e3b3328b78.zip 32735 BLAKE2B 5de266d7400ae80c027f209cea91c911e22b0ff4fc6a2e964e8906f1a86cc6905b9c12d2588d5fdc91d0d8e9501a0ddf2f7a376cca9935d21943386c3ef31979 SHA512 72621865ffc0cadd27603e2f4032f1cd9c9d8bdcb920b3ca9fd02dbf88e52876a6f092c5b74eceb136021c514b68dc599f0cbbf18ed1620b827d46462aa55e32
 DIST github.com%2F!burnt!sushi%2Ftoml%2F@v%2Fv0.3.1.mod 34 BLAKE2B ce54a247aef91043830bdf0603c8452ba38eceb1495af6e7a74c9119234a0dc5cd080cb25258c28f5e270acf91189a5ed33e361cbf17de2be5e37dadbda1d90d SHA512 320941bc3b7fb8bc595e6135cbc513a7583d129f0cd92508055291e141191066303cf75148e25198c21f6c6c539a790ea3210f3ecf5de6a2a03b70c753091146
@@ -180,5 +185,6 @@ DIST gotest.tools%2F@v%2Fv2.2.0+incompatible.zip 88327 BLAKE2B 8730134244a00fb47
 DIST honnef.co%2Fgo%2Ftools%2F@v%2Fv0.0.0-20190102054323-c2f93a96b099.mod 26 BLAKE2B db6cc87a17bed88b955e6b36a17568930239c94a969211b02c2d5acc70386fbea63ac44365a0d3241e900125bd64644d698d8f1bdcabc3e6cf99c47259c63df5 SHA512 d00ae74b24e7fb3ff351ff68b88e59636153bbcf92b36e81e91556e3e75a7ccfb08ce471f757f92fd7612378944de3d7309c73923812e2df6a26b74e999ca9ce
 DIST honnef.co%2Fgo%2Ftools%2F@v%2Fv0.0.0-20190523083050-ea95bdfd59fc.mod 26 BLAKE2B db6cc87a17bed88b955e6b36a17568930239c94a969211b02c2d5acc70386fbea63ac44365a0d3241e900125bd64644d698d8f1bdcabc3e6cf99c47259c63df5 SHA512 d00ae74b24e7fb3ff351ff68b88e59636153bbcf92b36e81e91556e3e75a7ccfb08ce471f757f92fd7612378944de3d7309c73923812e2df6a26b74e999ca9ce
 EBUILD drone-runner-docker-1.6.3.ebuild 10934 BLAKE2B e501a511290ecc6fadfd6a8cf8758285b8025b8e2a40894f71bd09acb21d9718c3efe5dceefbdf0d9b9825a5647cf8659e4c56173b4e09b4ec0efa2fbd3b531b SHA512 05f477e1e12a43401323d53b4b5112d649d474b790ebd8f178c8f02ec986421c96a853ad4b6a7eaee42c591163b22c10e51ea3cb7455e3a7c61a913bee508b8b
-MISC ChangeLog 1580 BLAKE2B a1aadb6af56d43c390d70076461691a2de4ae0403f46f596050c469d8970c24c37746c50b701de94fbc3c7b7d9f210198041ccba54d2332ac608c25321138efa SHA512 94904d6e39d7bf9d4c36c93f8fd2914743c59f90c3c5f51a6d011bc9cc658a7565cd8c759016e32910d273f9bf68892661cd5b4dd084e59ffd4f02a47a2e7eef
+EBUILD drone-runner-docker-1.8.1.ebuild 1146 BLAKE2B 0d34b7a020f01cb7dd150ecf914a1610bec22e1d9818f2c59960fbd163dcd513f1918e8faaead019bbff8099cc7839accbfc610acee481c2ad90dd86233ccd89 SHA512 e646f2542d04c597dff82a9e81193f03006f6e52ee469cb856820883b7740b13a9aec102fd4a3f1761290155affef75c44fd8df141b0f20ca258c07b6bd5e476
+MISC ChangeLog 1877 BLAKE2B 73290745846a22cd13cba3ab887ee321012a72aef9a608e07ef5afb02cb40fecc1f94ffb1767df520c28b3d50ad4d9cf4390bc9557180a8dc7086acf4d687a1b SHA512 970c380299d6b3025e9568cc3c4d05f688493403dca8d65365237927acbd1bbbe438392170672b30823f3cf31a007a81bf32cd4ef2caebb7c92d9de2fe075638
 MISC metadata.xml 248 BLAKE2B cb50cad2c614a99daa2e236f9e0d0fab1ab20a898c0b0f0c28a1387820ab1f2b9dd4d396a3b38f732b493824f96a29ee5894e80e09dbd08dff62c1aaba3feaa0 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2
