@@ -1,0 +1,15 @@
+# Drone docker runner configuration file. See
+# https://docs.drone.io/runner/docker/configuration/reference/ for a complete
+# list of configuration options.
+
+# provides the hostname (and optional port) of your Drone server. The runner connects to the server at the host address to receive pipelines for execution.
+DRONE_RPC_HOST="drone.example.com"
+
+# provides the protocol used to connect to your Drone server. The value must be either http or https.
+DRONE_RPC_PROTO="https"
+
+# provides the shared secret used to authenticate with your Drone server. This must match the secret defined in your Drone server configuration.
+DRONE_RPC_SECRET="your-secret-goes-here"
+
+# Optional string value configures HTTP port to bind to. default: :3000
+DRONE_HTTP_BIND="localhost:3030"
